<resources>
    <string name="app_name">家长会在线</string>
    <string name="input_learning_section">请选择学龄段</string>
    <string name="input_learning_year">请选择入学年份</string>
    <string name="input_student_name">请输入学生姓名</string>
    <string name="input_select_role">您的身份?</string>
    <string name="login">登 录</string>
    <string name="wx_login">微信登录</string>
    <string name="login_desc">家长好好学习 孩子天天向上</string>
    <string name="login_addition">登录即表示同意用户协议</string>
    <string name="loading">加载中&#8230;</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="no_ops_permission">您没有%s权限</string>
    <string name="tip_ops_permission">请进入手机系统设置的授权管理中心，授权应用权限。 </string>
    <string name="confirm">确定</string>
    <string name="tip">提示</string>
    <string name="permission_deny_to_settings">您没有权限，是否去设置？</string>
    <string name="permission_camera_deny_to_settings">您需要相机权限，是否去设置？</string>
    <string name="permission_audio_deny_to_settings">您需要麦克风权限，是否去设置？</string>
    <string name="permission_phone_to_settings">您需要电话权限，是否去设置？</string>
    <string name="permission_rw_storage_to_settings">您需要存储权限，是否去设置？</string>
    <string name="permission_read_sms">您需要短信权限，是否去设置？</string>
    <string name="permission_video">您需要相机权限和麦克风权限，是否去设置？</string>
    <string name="permission_location">您需要位置权限，是否去设置？</string>
    <string name="permission_phone_and_sms">您需要电话和短信权限，是否去设置？</string>
    <string name="no_audio_record_permission">您没有录音权限</string>
    <string name="permission_install_app">您需要安装软件权限，是否去设置？</string>

    <string name="finish">完 成</string>
    <string name="role_mother">妈妈</string>
    <string name="role_father">爸爸</string>
    <string name="role_other">其他</string>
    <string name="home_msg_center">消息中心</string>
    <string name="home_mine">我</string>
    <string name="home_living">正在直播</string>
    <string name="home_look_the_live">人在听</string>
    <string name="home_enter_live_room">进入直播间</string>
    <string name="home_live_will">即将直播</string>
    <string name="home_live_review">往期直播</string>
    <string name="home_live_will_tip">晚上 19:30 不见不散</string>
    <string name="home_live_review_tip">精彩回放随时收听</string>
    <string name="home_live_top_picks">精彩推荐</string>
    <string name="home_live_top_picks_desc">往期经典万人播放</string>
    <string name="home_search_bar_hint">请输入搜索关键词</string>
    <string name="home_search_hint">找不到想看的讲座？试试搜索一下</string>
    <string name="home_logo_tip">(C)2018 All rights reserved</string>
    <string name="check_all_review_live">查看全部往期讲座</string>
    <string name="check_all_will_live">查看全部即将开播讲座</string>
    <string name="search_history">搜索记录</string>
    <string name="search_hot">热门搜索</string>
    <string name="subscribe_live">预约讲座</string>
    <string name="myself_favorite">收藏讲座</string>
    <string name="myself_feedback">意见反馈</string>
    <string name="myself">我的</string>
    <string name="myself_logout">退出登录</string>
    <string name="myself_exit_class">退出班级</string>
    <string name="confirm_to_exit_class">您确定要退出班级吗？</string>
    <string name="confirm_to_logout">您确定要退出登录吗？</string>
    <string name="avatar">头像</string>
    <string name="alias">昵称</string>
    <string name="phone">手机号</string>
    <string name="role_info">身份信息</string>
    <string name="personal_info">个人信息</string>
    <string name="capture">拍照</string>
    <string name="photo_from_album">从相册中选择</string>
    <string name="change_phone">修改手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="wx_errcode_success">发送成功</string>
    <string name="wx_errcode_cancel">发送取消</string>
    <string name="wx_errcode_deny">发送被拒绝</string>
    <string name="wx_errcode_unknown">发送返回</string>
    <string name="wx_errcode_is_not_install">您还未安装微信</string>
    <string name="select_learning_year">请选择入学年份</string>
    <string name="section_preschool">学龄前</string>
    <string name="section_primary_school">小学</string>
    <string name="section_junior_school">初中</string>
    <string name="section_senior_school">高中</string>
    <string name="count_for_look">%1$d 收听</string>
    <string name="count_for_comment">%1$d 评论</string>
    <string name="all_with_count">全部(%1$d)</string>
    <string name="all">全部</string>
    <string name="tip_sdcard_cannot_use">sd卡不可用</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="phone_number_is_invalid">请输入正确的手机号</string>
    <string name="please_input_sms_code">请输入短信验证码</string>
    <string name="login_doing">正在登录&#8230;</string>
    <string name="upload_percent">正在上传&#8230;</string>
    <string name="search">搜索</string>
    <string name="my_id">ID:%s</string>
    <string name="change_phone_success">手机号已更改</string>
    <string name="change_info_success">信息已更改</string>
    <string name="process_doing">正在处理&#8230;</string>
    <string name="tip_for_no_favorite">您还没有收藏讲座呀~ 快去收藏吧!</string>
    <string name="tip_for_no_subscribe">您还没有预约讲座呀~ 快去预约吧!</string>
    <string name="tip_for_no_data">没有相关数据!</string>
    <string name="tip_for_no_search_result">没有搜到相关内容,换个关键词试试吧!</string>
    <string name="tip_token_expired">登录已过期，请重新登录</string>
    <string name="title_token_expired">登录已过期</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="hint_feedback">请您填写至少10个字的问题描述，以便我们为您提供更优的家决方案</string>
    <string name="tip_feedback_input">请输入反馈内容</string>
    <string name="submit_success">已提交</string>

    <string name="mobile_no_register_title">家长您好，手机号无法匹配</string>
    <string name="mobile_no_register_tip">请使用微信登录或前往公众号“在线家长会”注册</string>
    <string name="long_press_for_save">长按图片保存二维码</string>
    <string name="use_wx_login">使用微信登录</string>
    <string name="tip_sdcard_no_more_space_for_save_image">存储空间不足，无法保存图片</string>
    <string name="tip_file_exist">图片已存在相册中，无须再次保存</string>
    <string name="tip_save_image_to_album">图片已保存到相册</string>
    <string name="find_new_version">发现新版本(%s)</string>
    <string name="download_doing">正在下载</string>
    <string name="confirm_update">确定更新</string>
    <string name="must_update">强制更新</string>
    <string name="start_install">开始安装&#8230;</string>
    <string name="myself_favorite_more">收藏更多讲座</string>
    <string name="subscribe_more_live">预约更多讲座</string>
    <string name="load_web_failed">加载失败</string>
    <string name="tip_reload">重新加载</string>
    <string name="web_title">详情页</string>
    <string name="tip_input_right_phone_or_code">请填写正确的手机号或验证码</string>
    <string name="favorite_success">收藏成功</string>
    <string name="cancle_favorite_success">取消收藏成功</string>





</resources>
