<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jzh.parents.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/login"
            android:src="@mipmap/ic_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:text="@string/login_desc"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

        <com.jzh.parents.widget.TSButton
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:onClick="@{()->viewModel.wxAuthorizeClick()}"
            android:text="@string/login"
            app:normal_color="@color/orange"
            app:pressed_color="@color/orange_dark"
            app:corner="6dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/login_addition"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

    </LinearLayout>

</layout>

