<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/find_new_version"
            android:textColor="@color/font_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/section_primary_school"
            android:textColor="@color/font_myself_class_title"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="16dp"
            android:background="@color/myself_divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/font_myself_class_title"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/myself_divider_line" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_selector"
                android:gravity="center"
                android:text="@string/confirm_update"
                android:textColor="@color/login_btn_green"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</layout>



