<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jzh.parents.viewmodel.MyselfEditViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/font_black"
            android:textSize="14sp" />

        <!-- 名称 -->
        <com.jzh.parents.widget.DialogContentItem
            android:id="@+id/item_student_name"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/round_bg_white_with_border"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:paddingRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:rc_hint="@string/input_student_name"
            app:rc_icon_src="@mipmap/icon_register_name"
            app:rc_is_input_editable="true"
            app:rc_show_tap_arrow="false"
            app:contentText="@={viewModel.studentName}"
            />

        <!-- 身份 -->
        <com.jzh.parents.widget.DialogContentItem
            android:id="@+id/item_select_role"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_bg_white_with_border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            app:rc_hint="@string/input_select_role"
            app:rc_icon_src="@mipmap/icon_register_role"
            app:rc_is_optional="true"
            app:checkedValue="@={viewModel.selectRole}"
            app:rc_show_tap_arrow="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="16dp"
            android:background="@color/myself_divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/font_myself_class_title"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/cancel"
                android:background="@drawable/item_selector"
                android:layout_weight="1"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/myself_divider_line"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/login_btn_green"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/confirm"
                android:background="@drawable/item_selector"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</layout>

