<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jzh.parents.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/login"
            android:src="@mipmap/ic_login" />

        <!-- 学段 -->
        <com.jzh.parents.widget.RegisterContentItem
            android:id="@+id/content_item_learning_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/round_white_bg"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="60dp"
            android:textSize="18sp"
            app:rc_hint="@string/input_learning_section"
            app:rc_icon_src="@mipmap/icon_register_learning_section"
            />

        <!-- 入学年份 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_learning_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_learning_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_learning_year"
                android:text="@={viewModel.learningYear}"/>

        </android.support.design.widget.TextInputLayout>

        <!-- 名称 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_student_name"
                android:text="@={viewModel.studentName}"/>

        </android.support.design.widget.TextInputLayout>

        <!-- 身份 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_select_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_select_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_select_role"
                android:text="@={viewModel.selectRole}"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:onClick="onRegisterBtnClick"/>

    </LinearLayout>

</layout>