<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="171dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg_white_with_border"
                android:divider="@drawable/divider_line"
                android:showDividers="middle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_capture"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"
                    android:text="@string/capture"
                    android:textColor="@color/font_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"
                    android:text="@string/photo_from_album"
                    android:textColor="@color/font_black"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_bg_white_with_border"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/font_black"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>


